# src/routes/index.ts
@@ -9,6 +9,7 @@ import farm from './farm/index';
 import waste from './waste/index';
 import contentCreator from './content-creator/index';
 import academy from './academy/index';
+import gpt from './gpt/index';
 const router: Router = express.Router();
 
 router.use('/auth', auth);
@@ -21,5 +22,6 @@ router.use('/farm', farm);
 router.use('/waste', waste);
 router.use('/content-creator', contentCreator);
 router.use('/academy', academy);
+router.use('/gpt', gpt);
 
 export default router;
